# zerobrew

./: CONTRIBUTING.md  Justfile  README.md  install.sh
zb_cli/src/: cli.rs  main.rs
zb_cli/src/commands/: mod.rs  run.rs
zb_io/: Cargo.toml
zb_io/src/: download.rs  lib.rs  materialize.rs
