[package]
name = "zb_io"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
zb_core = { path = "../zb_core" }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
